--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -7,13 +7,24 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-orange-50: oklch(98% 0.016 73.684);
+    --color-orange-400: oklch(75% 0.183 55.934);
+    --color-green-500: oklch(72.3% 0.219 149.579);
+    --color-green-600: oklch(62.7% 0.194 149.214);
+    --color-teal-500: oklch(70.4% 0.14 182.503);
+    --color-cyan-500: oklch(71.5% 0.143 215.221);
     --color-slate-300: oklch(86.9% 0.022 252.894);
     --color-gray-200: oklch(92.8% 0.006 264.531);
+    --color-gray-300: oklch(87.2% 0.01 258.338);
     --color-gray-400: oklch(70.7% 0.022 261.325);
+    --color-gray-500: oklch(55.1% 0.027 264.364);
+    --color-gray-600: oklch(44.6% 0.03 256.802);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
     --container-md: 28rem;
+    --container-5xl: 64rem;
+    --container-7xl: 80rem;
     --text-xs: 0.75rem;
     --text-xs--line-height: calc(1 / 0.75);
     --text-sm: 0.875rem;
@@ -36,9 +47,12 @@
     --font-weight-medium: 500;
     --font-weight-semibold: 600;
     --font-weight-bold: 700;
+    --font-weight-extrabold: 800;
+    --leading-snug: 1.375;
     --leading-normal: 1.5;
     --radius-md: 0.375rem;
     --radius-lg: 0.5rem;
+    --radius-xl: 0.75rem;
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
@@ -221,6 +235,9 @@
   .top-1\/2 {
     top: calc(1/2 * 100%);
   }
+  .top-5 {
+    top: calc(var(--spacing) * 5);
+  }
   .top-9 {
     top: calc(var(--spacing) * 9);
   }
@@ -256,6 +273,9 @@
   }
   .right-11 {
     right: calc(var(--spacing) * 11);
+  }
+  .right-\[67px\] {
+    right: 67px;
   }
   .right-\[87px\] {
     right: 87px;
@@ -311,6 +331,9 @@
   .z-\[-1\] {
     z-index: -1;
   }
+  .z-\[1\] {
+    z-index: 1;
+  }
   .col-span-full {
     grid-column: 1 / -1;
   }
@@ -365,8 +388,20 @@
   .mt-\[64px\] {
     margin-top: 64px;
   }
+  .mt-\[110px\] {
+    margin-top: 110px;
+  }
+  .mb-4 {
+    margin-bottom: calc(var(--spacing) * 4);
+  }
+  .mb-6 {
+    margin-bottom: calc(var(--spacing) * 6);
+  }
   .mb-10 {
     margin-bottom: calc(var(--spacing) * 10);
+  }
+  .ml-2 {
+    margin-left: calc(var(--spacing) * 2);
   }
   .ml-2\.5 {
     margin-left: calc(var(--spacing) * 2.5);
@@ -392,14 +427,23 @@
   .hidden {
     display: none;
   }
+  .inline-block {
+    display: inline-block;
+  }
   .inline-flex {
     display: inline-flex;
+  }
+  .h-1\.5 {
+    height: calc(var(--spacing) * 1.5);
   }
   .h-6 {
     height: calc(var(--spacing) * 6);
   }
   .h-8 {
     height: calc(var(--spacing) * 8);
+  }
+  .h-9 {
+    height: calc(var(--spacing) * 9);
   }
   .h-10 {
     height: calc(var(--spacing) * 10);
@@ -437,6 +481,9 @@
   .max-h-\[88px\] {
     max-height: 88px;
   }
+  .max-h-\[190px\] {
+    max-height: 190px;
+  }
   .max-h-\[300px\] {
     max-height: 300px;
   }
@@ -461,6 +508,12 @@
   .w-7\.5 {
     width: calc(var(--spacing) * 7.5);
   }
+  .w-8 {
+    width: calc(var(--spacing) * 8);
+  }
+  .w-9 {
+    width: calc(var(--spacing) * 9);
+  }
   .w-10 {
     width: calc(var(--spacing) * 10);
   }
@@ -469,6 +522,9 @@
   }
   .w-16 {
     width: calc(var(--spacing) * 16);
+  }
+  .w-32 {
+    width: calc(var(--spacing) * 32);
   }
   .w-\[1px\] {
     width: 1px;
@@ -479,11 +535,23 @@
   .w-full {
     width: 100%;
   }
+  .max-w-5xl {
+    max-width: var(--container-5xl);
+  }
+  .max-w-7xl {
+    max-width: var(--container-7xl);
+  }
+  .max-w-20 {
+    max-width: calc(var(--spacing) * 20);
+  }
   .max-w-36 {
     max-width: calc(var(--spacing) * 36);
   }
   .max-w-\[70px\] {
     max-width: 70px;
+  }
+  .max-w-\[190px\] {
+    max-width: 190px;
   }
   .max-w-\[200px\] {
     max-width: 200px;
@@ -491,8 +559,14 @@
   .max-w-\[212px\] {
     max-width: 212px;
   }
+  .max-w-\[410px\] {
+    max-width: 410px;
+  }
   .max-w-\[431px\] {
     max-width: 431px;
+  }
+  .max-w-\[528px\] {
+    max-width: 528px;
   }
   .max-w-\[776px\] {
     max-width: 776px;
@@ -511,6 +585,9 @@
   }
   .flex-grow-0 {
     flex-grow: 0;
+  }
+  .grow {
+    flex-grow: 1;
   }
   .basis-auto {
     flex-basis: auto;
@@ -550,6 +627,9 @@
   .flex-col {
     flex-direction: column;
   }
+  .flex-row {
+    flex-direction: row;
+  }
   .flex-wrap {
     flex-wrap: wrap;
   }
@@ -577,6 +657,9 @@
   .gap-2\.5 {
     gap: calc(var(--spacing) * 2.5);
   }
+  .gap-3 {
+    gap: calc(var(--spacing) * 3);
+  }
   .gap-3\.5 {
     gap: calc(var(--spacing) * 3.5);
   }
@@ -595,6 +678,9 @@
   .gap-8 {
     gap: calc(var(--spacing) * 8);
   }
+  .gap-10 {
+    gap: calc(var(--spacing) * 10);
+  }
   .gap-\[14px\] {
     gap: 14px;
   }
@@ -604,17 +690,37 @@
   .gap-\[25px\] {
     gap: 25px;
   }
+  .space-y-4 {
+    :where(& > :not(:last-child)) {
+      --tw-space-y-reverse: 0;
+      margin-block-start: calc(calc(var(--spacing) * 4) * var(--tw-space-y-reverse));
+      margin-block-end: calc(calc(var(--spacing) * 4) * calc(1 - var(--tw-space-y-reverse)));
+    }
+  }
+  .space-y-6 {
+    :where(& > :not(:last-child)) {
+      --tw-space-y-reverse: 0;
+      margin-block-start: calc(calc(var(--spacing) * 6) * var(--tw-space-y-reverse));
+      margin-block-end: calc(calc(var(--spacing) * 6) * calc(1 - var(--tw-space-y-reverse)));
+    }
+  }
   .gap-x-5 {
     column-gap: calc(var(--spacing) * 5);
   }
   .gap-y-7\.5 {
     row-gap: calc(var(--spacing) * 7.5);
   }
+  .self-center {
+    align-self: center;
+  }
   .overflow-hidden {
     overflow: hidden;
   }
   .overflow-y-auto {
     overflow-y: auto;
+  }
+  .rounded {
+    border-radius: 0.25rem;
   }
   .rounded-\[4px\] {
     border-radius: 4px;
@@ -636,6 +742,21 @@
   }
   .rounded-md {
     border-radius: var(--radius-md);
+  }
+  .rounded-xl {
+    border-radius: var(--radius-xl);
+  }
+  .rounded-tl-\[50px\] {
+    border-top-left-radius: 50px;
+  }
+  .rounded-tr-\[10px\] {
+    border-top-right-radius: 10px;
+  }
+  .rounded-br-\[50px\] {
+    border-bottom-right-radius: 50px;
+  }
+  .rounded-bl-\[10px\] {
+    border-bottom-left-radius: 10px;
   }
   .border {
     border-style: var(--tw-border-style);
@@ -662,17 +783,26 @@
   .border-\[var\(--secondary\)\] {
     border-color: var(--secondary);
   }
+  .border-cyan-500 {
+    border-color: var(--color-cyan-500);
+  }
   .border-gray-200 {
     border-color: var(--color-gray-200);
   }
   .border-gray-400 {
     border-color: var(--color-gray-400);
   }
+  .border-transparent {
+    border-color: transparent;
+  }
   .border-white {
     border-color: var(--color-white);
   }
   .border-b-slate-300 {
     border-bottom-color: var(--color-slate-300);
+  }
+  .bg-\[\#0A6375\] {
+    background-color: #0A6375;
   }
   .bg-\[var\(--destructive\)\] {
     background-color: var(--destructive);
@@ -695,6 +825,21 @@
       background-color: color-mix(in oklab, var(--color-black) 30%, transparent);
     }
   }
+  .bg-cyan-500 {
+    background-color: var(--color-cyan-500);
+  }
+  .bg-gray-300 {
+    background-color: var(--color-gray-300);
+  }
+  .bg-orange-50 {
+    background-color: var(--color-orange-50);
+  }
+  .bg-orange-400 {
+    background-color: var(--color-orange-400);
+  }
+  .bg-teal-500 {
+    background-color: var(--color-teal-500);
+  }
   .bg-transparent {
     background-color: transparent;
   }
@@ -709,6 +854,9 @@
   }
   .p-4 {
     padding: calc(var(--spacing) * 4);
+  }
+  .p-6 {
+    padding: calc(var(--spacing) * 6);
   }
   .p-7 {
     padding: calc(var(--spacing) * 7);
@@ -734,6 +882,9 @@
   .px-\[18px\] {
     padding-inline: 18px;
   }
+  .py-2 {
+    padding-block: calc(var(--spacing) * 2);
+  }
   .py-2\.5 {
     padding-block: calc(var(--spacing) * 2.5);
   }
@@ -743,11 +894,23 @@
   .py-5 {
     padding-block: calc(var(--spacing) * 5);
   }
+  .py-7 {
+    padding-block: calc(var(--spacing) * 7);
+  }
   .py-9 {
     padding-block: calc(var(--spacing) * 9);
   }
+  .py-12 {
+    padding-block: calc(var(--spacing) * 12);
+  }
+  .py-20 {
+    padding-block: calc(var(--spacing) * 20);
+  }
   .py-\[15px\] {
     padding-block: 15px;
+  }
+  .pt-1 {
+    padding-top: calc(var(--spacing) * 1);
   }
   .pt-5 {
     padding-top: calc(var(--spacing) * 5);
@@ -772,6 +935,9 @@
   }
   .pb-6 {
     padding-bottom: calc(var(--spacing) * 6);
+  }
+  .pb-7\.5 {
+    padding-bottom: calc(var(--spacing) * 7.5);
   }
   .pb-10 {
     padding-bottom: calc(var(--spacing) * 10);
@@ -832,6 +998,14 @@
     --tw-leading: 110%;
     line-height: 110%;
   }
+  .leading-\[130\%\] {
+    --tw-leading: 130%;
+    line-height: 130%;
+  }
+  .leading-\[140\%\] {
+    --tw-leading: 140%;
+    line-height: 140%;
+  }
   .leading-\[141\%\] {
     --tw-leading: 141%;
     line-height: 141%;
@@ -844,9 +1018,17 @@
     --tw-leading: var(--leading-normal);
     line-height: var(--leading-normal);
   }
+  .leading-snug {
+    --tw-leading: var(--leading-snug);
+    line-height: var(--leading-snug);
+  }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
+  }
+  .font-extrabold {
+    --tw-font-weight: var(--font-weight-extrabold);
+    font-weight: var(--font-weight-extrabold);
   }
   .font-medium {
     --tw-font-weight: var(--font-weight-medium);
@@ -884,6 +1066,21 @@
   .text-black {
     color: var(--color-black);
   }
+  .text-cyan-500 {
+    color: var(--color-cyan-500);
+  }
+  .text-gray-500 {
+    color: var(--color-gray-500);
+  }
+  .text-gray-600 {
+    color: var(--color-gray-600);
+  }
+  .text-green-500 {
+    color: var(--color-green-500);
+  }
+  .text-green-600 {
+    color: var(--color-green-600);
+  }
   .text-white {
     color: var(--color-white);
   }
@@ -892,6 +1089,10 @@
   }
   .opacity-100 {
     opacity: 100%;
+  }
+  .shadow-2xl {
+    --tw-shadow: 0 25px 50px -12px var(--tw-shadow-color, rgb(0 0 0 / 0.25));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
   .shadow-md {
     --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
@@ -905,6 +1106,11 @@
     --tw-drop-shadow-size: drop-shadow(0px 4.8px 24.4px var(--tw-drop-shadow-color, rgba(19,16,34,0.10)));
     --tw-drop-shadow: var(--tw-drop-shadow-size);
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
+  }
+  .transition {
+    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, visibility, content-visibility, overlay, pointer-events;
+    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+    transition-duration: var(--tw-duration, var(--default-transition-duration));
   }
   .transition-\[top\] {
     transition-property: top;
@@ -1020,6 +1226,34 @@
       }
     }
   }
+  .group-hover\/team\:rounded-tl-\[10px\] {
+    &:is(:where(.group\/team):hover *) {
+      @media (hover: hover) {
+        border-top-left-radius: 10px;
+      }
+    }
+  }
+  .group-hover\/team\:rounded-tr-\[50px\] {
+    &:is(:where(.group\/team):hover *) {
+      @media (hover: hover) {
+        border-top-right-radius: 50px;
+      }
+    }
+  }
+  .group-hover\/team\:rounded-br-\[10px\] {
+    &:is(:where(.group\/team):hover *) {
+      @media (hover: hover) {
+        border-bottom-right-radius: 10px;
+      }
+    }
+  }
+  .group-hover\/team\:rounded-bl-\[50px\] {
+    &:is(:where(.group\/team):hover *) {
+      @media (hover: hover) {
+        border-bottom-left-radius: 50px;
+      }
+    }
+  }
   .after\:absolute {
     &::after {
       content: var(--tw-content);
@@ -1074,10 +1308,31 @@
       background-color: transparent;
     }
   }
+  .hover\:border-\[var\(--destructive\)\] {
+    &:hover {
+      @media (hover: hover) {
+        border-color: var(--destructive);
+      }
+    }
+  }
+  .hover\:border-\[var\(--green\)\] {
+    &:hover {
+      @media (hover: hover) {
+        border-color: var(--green);
+      }
+    }
+  }
   .hover\:border-transparent {
     &:hover {
       @media (hover: hover) {
         border-color: transparent;
+      }
+    }
+  }
+  .hover\:bg-\[var\(--destructive\)\] {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--destructive);
       }
     }
   }
@@ -1088,10 +1343,24 @@
       }
     }
   }
+  .hover\:bg-cyan-500 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-cyan-500);
+      }
+    }
+  }
   .hover\:bg-white {
     &:hover {
       @media (hover: hover) {
         background-color: var(--color-white);
+      }
+    }
+  }
+  .hover\:text-\[var\(--destructive-foreground\)\] {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--destructive-foreground);
       }
     }
   }
@@ -1184,9 +1453,19 @@
       flex-direction: row;
     }
   }
+  .sm\:flex-nowrap {
+    @media (width >= 40rem) {
+      flex-wrap: nowrap;
+    }
+  }
   .sm\:items-end {
     @media (width >= 40rem) {
       align-items: flex-end;
+    }
+  }
+  .sm\:gap-4 {
+    @media (width >= 40rem) {
+      gap: calc(var(--spacing) * 4);
     }
   }
   .sm\:p-\[14px\] {
@@ -1234,6 +1513,11 @@
       height: calc(100% - 50%);
     }
   }
+  .md\:max-w-25 {
+    @media (width >= 48rem) {
+      max-width: calc(var(--spacing) * 25);
+    }
+  }
   .md\:max-w-\[88px\] {
     @media (width >= 48rem) {
       max-width: 88px;
@@ -1247,6 +1531,17 @@
   .md\:gap-7\.5 {
     @media (width >= 48rem) {
       gap: calc(var(--spacing) * 7.5);
+    }
+  }
+  .md\:px-6 {
+    @media (width >= 48rem) {
+      padding-inline: calc(var(--spacing) * 6);
+    }
+  }
+  .md\:text-2xl {
+    @media (width >= 48rem) {
+      font-size: var(--text-2xl);
+      line-height: var(--tw-leading, var(--text-2xl--line-height));
     }
   }
   .md\:text-5xl {
@@ -1282,9 +1577,14 @@
       top: calc(var(--spacing) * 0);
     }
   }
-  .lg\:bottom-20 {
+  .lg\:top-16 {
     @media (width >= 64rem) {
-      bottom: calc(var(--spacing) * 20);
+      top: calc(var(--spacing) * 16);
+    }
+  }
+  .lg\:bottom-18 {
+    @media (width >= 64rem) {
+      bottom: calc(var(--spacing) * 18);
     }
   }
   .lg\:left-24 {
@@ -1342,6 +1642,11 @@
       width: calc(var(--spacing) * 20);
     }
   }
+  .lg\:w-48 {
+    @media (width >= 64rem) {
+      width: calc(var(--spacing) * 48);
+    }
+  }
   .lg\:w-\[25\%\] {
     @media (width >= 64rem) {
       width: 25%;
@@ -1362,6 +1667,11 @@
       width: 70%;
     }
   }
+  .lg\:max-w-\[111px\] {
+    @media (width >= 64rem) {
+      max-width: 111px;
+    }
+  }
   .lg\:max-w-\[176px\] {
     @media (width >= 64rem) {
       max-width: 176px;
@@ -1372,6 +1682,11 @@
       max-width: 223px;
     }
   }
+  .lg\:max-w-\[300px\] {
+    @media (width >= 64rem) {
+      max-width: 300px;
+    }
+  }
   .lg\:max-w-\[410px\] {
     @media (width >= 64rem) {
       max-width: 410px;
@@ -1380,6 +1695,16 @@
   .lg\:max-w-\[439px\] {
     @media (width >= 64rem) {
       max-width: 439px;
+    }
+  }
+  .lg\:max-w-\[460px\] {
+    @media (width >= 64rem) {
+      max-width: 460px;
+    }
+  }
+  .lg\:max-w-\[520px\] {
+    @media (width >= 64rem) {
+      max-width: 520px;
     }
   }
   .lg\:max-w-\[600px\] {
@@ -1403,6 +1728,21 @@
       translate: var(--tw-translate-x) var(--tw-translate-y);
     }
   }
+  .lg\:grid-cols-2 {
+    @media (width >= 64rem) {
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+  }
+  .lg\:grid-cols-3 {
+    @media (width >= 64rem) {
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+  }
+  .lg\:grid-cols-\[37\%_auto\] {
+    @media (width >= 64rem) {
+      grid-template-columns: 37% auto;
+    }
+  }
   .lg\:grid-cols-\[40\%_auto\] {
     @media (width >= 64rem) {
       grid-template-columns: 40% auto;
@@ -1421,6 +1761,11 @@
   .lg\:items-center {
     @media (width >= 64rem) {
       align-items: center;
+    }
+  }
+  .lg\:justify-between {
+    @media (width >= 64rem) {
+      justify-content: space-between;
     }
   }
   .lg\:gap-7\.5 {
@@ -1443,9 +1788,34 @@
       padding: calc(var(--spacing) * 10);
     }
   }
+  .lg\:px-8 {
+    @media (width >= 64rem) {
+      padding-inline: calc(var(--spacing) * 8);
+    }
+  }
+  .lg\:px-10 {
+    @media (width >= 64rem) {
+      padding-inline: calc(var(--spacing) * 10);
+    }
+  }
   .lg\:py-7\.5 {
     @media (width >= 64rem) {
       padding-block: calc(var(--spacing) * 7.5);
+    }
+  }
+  .lg\:py-9 {
+    @media (width >= 64rem) {
+      padding-block: calc(var(--spacing) * 9);
+    }
+  }
+  .lg\:py-10 {
+    @media (width >= 64rem) {
+      padding-block: calc(var(--spacing) * 10);
+    }
+  }
+  .lg\:py-\[120px\] {
+    @media (width >= 64rem) {
+      padding-block: 120px;
     }
   }
   .lg\:pt-15 {
@@ -1525,6 +1895,31 @@
       grid-template-columns: repeat(2, minmax(0, 1fr));
     }
   }
+  .xl\:gap-20 {
+    @media (width >= 80rem) {
+      gap: calc(var(--spacing) * 20);
+    }
+  }
+  .xl\:px-10 {
+    @media (width >= 80rem) {
+      padding-inline: calc(var(--spacing) * 10);
+    }
+  }
+  .xl\:px-\[85px\] {
+    @media (width >= 80rem) {
+      padding-inline: 85px;
+    }
+  }
+  .xl\:py-20 {
+    @media (width >= 80rem) {
+      padding-block: calc(var(--spacing) * 20);
+    }
+  }
+  .xl\:py-\[53px\] {
+    @media (width >= 80rem) {
+      padding-block: 53px;
+    }
+  }
   .xl\:text-\[70px\] {
     @media (width >= 80rem) {
       font-size: 70px;
@@ -1534,6 +1929,21 @@
     @media (width >= 80rem) {
       --tw-leading: 128%;
       line-height: 128%;
+    }
+  }
+  .\32 xl\:top-\[120px\] {
+    @media (width >= 96rem) {
+      top: 120px;
+    }
+  }
+  .\32 xl\:left-15 {
+    @media (width >= 96rem) {
+      left: calc(var(--spacing) * 15);
+    }
+  }
+  .\32 xl\:w-auto {
+    @media (width >= 96rem) {
+      width: auto;
     }
   }
   .\[\&_\.swiper-slide-active_\.card-footer\]\:visible {
@@ -1679,6 +2089,11 @@
   initial-value: 0;
 }
 @property --tw-translate-z {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
+@property --tw-space-y-reverse {
   syntax: "*";
   inherits: false;
   initial-value: 0;
@@ -1829,6 +2244,7 @@
       --tw-translate-x: 0;
       --tw-translate-y: 0;
       --tw-translate-z: 0;
+      --tw-space-y-reverse: 0;
       --tw-border-style: solid;
       --tw-leading: initial;
       --tw-font-weight: initial;
