--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -7,24 +7,17 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-orange-50: oklch(98% 0.016 73.684);
     --color-orange-400: oklch(75% 0.183 55.934);
-    --color-green-500: oklch(72.3% 0.219 149.579);
-    --color-green-600: oklch(62.7% 0.194 149.214);
     --color-teal-500: oklch(70.4% 0.14 182.503);
     --color-cyan-500: oklch(71.5% 0.143 215.221);
     --color-slate-300: oklch(86.9% 0.022 252.894);
     --color-gray-200: oklch(92.8% 0.006 264.531);
-    --color-gray-300: oklch(87.2% 0.01 258.338);
     --color-gray-400: oklch(70.7% 0.022 261.325);
-    --color-gray-500: oklch(55.1% 0.027 264.364);
     --color-gray-600: oklch(44.6% 0.03 256.802);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
     --container-md: 28rem;
-    --container-5xl: 64rem;
-    --container-7xl: 80rem;
     --text-xs: 0.75rem;
     --text-xs--line-height: calc(1 / 0.75);
     --text-sm: 0.875rem;
@@ -52,7 +45,6 @@
     --leading-normal: 1.5;
     --radius-md: 0.375rem;
     --radius-lg: 0.5rem;
-    --radius-xl: 0.75rem;
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
@@ -391,17 +383,14 @@
   .mt-\[110px\] {
     margin-top: 110px;
   }
-  .mb-4 {
-    margin-bottom: calc(var(--spacing) * 4);
+  .mr-0 {
+    margin-right: calc(var(--spacing) * 0);
   }
   .mb-6 {
     margin-bottom: calc(var(--spacing) * 6);
   }
   .mb-10 {
     margin-bottom: calc(var(--spacing) * 10);
-  }
-  .ml-2 {
-    margin-left: calc(var(--spacing) * 2);
   }
   .ml-2\.5 {
     margin-left: calc(var(--spacing) * 2.5);
@@ -411,6 +400,9 @@
   }
   .ml-16 {
     margin-left: calc(var(--spacing) * 16);
+  }
+  .ml-auto {
+    margin-left: auto;
   }
   .block {
     display: block;
@@ -427,14 +419,8 @@
   .hidden {
     display: none;
   }
-  .inline-block {
-    display: inline-block;
-  }
   .inline-flex {
     display: inline-flex;
-  }
-  .h-1\.5 {
-    height: calc(var(--spacing) * 1.5);
   }
   .h-6 {
     height: calc(var(--spacing) * 6);
@@ -535,12 +521,6 @@
   .w-full {
     width: 100%;
   }
-  .max-w-5xl {
-    max-width: var(--container-5xl);
-  }
-  .max-w-7xl {
-    max-width: var(--container-7xl);
-  }
   .max-w-20 {
     max-width: calc(var(--spacing) * 20);
   }
@@ -567,6 +547,9 @@
   }
   .max-w-\[528px\] {
     max-width: 528px;
+  }
+  .max-w-\[630px\] {
+    max-width: 630px;
   }
   .max-w-\[776px\] {
     max-width: 776px;
@@ -626,9 +609,6 @@
   }
   .flex-col {
     flex-direction: column;
-  }
-  .flex-row {
-    flex-direction: row;
   }
   .flex-wrap {
     flex-wrap: wrap;
@@ -697,13 +677,6 @@
       margin-block-end: calc(calc(var(--spacing) * 4) * calc(1 - var(--tw-space-y-reverse)));
     }
   }
-  .space-y-6 {
-    :where(& > :not(:last-child)) {
-      --tw-space-y-reverse: 0;
-      margin-block-start: calc(calc(var(--spacing) * 6) * var(--tw-space-y-reverse));
-      margin-block-end: calc(calc(var(--spacing) * 6) * calc(1 - var(--tw-space-y-reverse)));
-    }
-  }
   .gap-x-5 {
     column-gap: calc(var(--spacing) * 5);
   }
@@ -743,9 +716,6 @@
   .rounded-md {
     border-radius: var(--radius-md);
   }
-  .rounded-xl {
-    border-radius: var(--radius-xl);
-  }
   .rounded-tl-\[50px\] {
     border-top-left-radius: 50px;
   }
@@ -782,9 +752,6 @@
   }
   .border-\[var\(--secondary\)\] {
     border-color: var(--secondary);
-  }
-  .border-cyan-500 {
-    border-color: var(--color-cyan-500);
   }
   .border-gray-200 {
     border-color: var(--color-gray-200);
@@ -825,15 +792,6 @@
       background-color: color-mix(in oklab, var(--color-black) 30%, transparent);
     }
   }
-  .bg-cyan-500 {
-    background-color: var(--color-cyan-500);
-  }
-  .bg-gray-300 {
-    background-color: var(--color-gray-300);
-  }
-  .bg-orange-50 {
-    background-color: var(--color-orange-50);
-  }
   .bg-orange-400 {
     background-color: var(--color-orange-400);
   }
@@ -851,6 +809,9 @@
   }
   .p-2\.5 {
     padding: calc(var(--spacing) * 2.5);
+  }
+  .p-3 {
+    padding: calc(var(--spacing) * 3);
   }
   .p-4 {
     padding: calc(var(--spacing) * 4);
@@ -882,9 +843,6 @@
   .px-\[18px\] {
     padding-inline: 18px;
   }
-  .py-2 {
-    padding-block: calc(var(--spacing) * 2);
-  }
   .py-2\.5 {
     padding-block: calc(var(--spacing) * 2.5);
   }
@@ -897,11 +855,14 @@
   .py-7 {
     padding-block: calc(var(--spacing) * 7);
   }
+  .py-8 {
+    padding-block: calc(var(--spacing) * 8);
+  }
   .py-9 {
     padding-block: calc(var(--spacing) * 9);
   }
-  .py-12 {
-    padding-block: calc(var(--spacing) * 12);
+  .py-10 {
+    padding-block: calc(var(--spacing) * 10);
   }
   .py-20 {
     padding-block: calc(var(--spacing) * 20);
@@ -1069,17 +1030,8 @@
   .text-cyan-500 {
     color: var(--color-cyan-500);
   }
-  .text-gray-500 {
-    color: var(--color-gray-500);
-  }
   .text-gray-600 {
     color: var(--color-gray-600);
-  }
-  .text-green-500 {
-    color: var(--color-green-500);
-  }
-  .text-green-600 {
-    color: var(--color-green-600);
   }
   .text-white {
     color: var(--color-white);
@@ -1087,11 +1039,18 @@
   .opacity-0 {
     opacity: 0%;
   }
+  .opacity-30 {
+    opacity: 30%;
+  }
   .opacity-100 {
     opacity: 100%;
   }
   .shadow-2xl {
     --tw-shadow: 0 25px 50px -12px var(--tw-shadow-color, rgb(0 0 0 / 0.25));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  .shadow-\[0px_0px_60px_0px_rgba\(0\,0\,0\,0\.05\)\] {
+    --tw-shadow: 0px 0px 60px 0px var(--tw-shadow-color, rgba(0,0,0,0.05));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
   .shadow-md {
@@ -1106,11 +1065,6 @@
     --tw-drop-shadow-size: drop-shadow(0px 4.8px 24.4px var(--tw-drop-shadow-color, rgba(19,16,34,0.10)));
     --tw-drop-shadow: var(--tw-drop-shadow-size);
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
-  }
-  .transition {
-    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, visibility, content-visibility, overlay, pointer-events;
-    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
-    transition-duration: var(--tw-duration, var(--default-transition-duration));
   }
   .transition-\[top\] {
     transition-property: top;
@@ -1272,6 +1226,12 @@
       right: calc(var(--spacing) * 0);
     }
   }
+  .after\:left-0 {
+    &::after {
+      content: var(--tw-content);
+      left: calc(var(--spacing) * 0);
+    }
+  }
   .after\:z-\[-1\] {
     &::after {
       content: var(--tw-content);
@@ -1284,10 +1244,28 @@
       height: calc(100% - 120px);
     }
   }
+  .after\:h-full {
+    &::after {
+      content: var(--tw-content);
+      height: 100%;
+    }
+  }
   .after\:w-\[calc\(100\%-279px\)\] {
     &::after {
       content: var(--tw-content);
       width: calc(100% - 279px);
+    }
+  }
+  .after\:w-full {
+    &::after {
+      content: var(--tw-content);
+      width: 100%;
+    }
+  }
+  .after\:max-w-\[calc\(100\%-100px\)\] {
+    &::after {
+      content: var(--tw-content);
+      max-width: calc(100% - 100px);
     }
   }
   .after\:rounded-\[10px\] {
@@ -1306,6 +1284,18 @@
     &::after {
       content: var(--tw-content);
       background-color: transparent;
+    }
+  }
+  .after\:bg-cover {
+    &::after {
+      content: var(--tw-content);
+      background-size: cover;
+    }
+  }
+  .after\:bg-no-repeat {
+    &::after {
+      content: var(--tw-content);
+      background-repeat: no-repeat;
     }
   }
   .hover\:border-\[var\(--destructive\)\] {
@@ -1340,13 +1330,6 @@
     &:hover {
       @media (hover: hover) {
         background-color: var(--primary);
-      }
-    }
-  }
-  .hover\:bg-cyan-500 {
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-cyan-500);
       }
     }
   }
@@ -1418,6 +1401,11 @@
       grid-row: span 2 / span 2;
     }
   }
+  .sm\:-mr-10 {
+    @media (width >= 40rem) {
+      margin-right: calc(var(--spacing) * -10);
+    }
+  }
   .sm\:block {
     @media (width >= 40rem) {
       display: block;
@@ -1468,9 +1456,19 @@
       gap: calc(var(--spacing) * 4);
     }
   }
+  .sm\:p-8 {
+    @media (width >= 40rem) {
+      padding: calc(var(--spacing) * 8);
+    }
+  }
   .sm\:p-\[14px\] {
     @media (width >= 40rem) {
       padding: 14px;
+    }
+  }
+  .sm\:py-0 {
+    @media (width >= 40rem) {
+      padding-block: calc(var(--spacing) * 0);
     }
   }
   .md\:col-start-5 {
@@ -1533,6 +1531,11 @@
       gap: calc(var(--spacing) * 7.5);
     }
   }
+  .md\:p-5 {
+    @media (width >= 48rem) {
+      padding: calc(var(--spacing) * 5);
+    }
+  }
   .md\:px-6 {
     @media (width >= 48rem) {
       padding-inline: calc(var(--spacing) * 6);
@@ -1565,6 +1568,20 @@
     @media (width >= 48rem) {
       --tw-leading: 120%;
       line-height: 120%;
+    }
+  }
+  .md\:leading-\[140\%\] {
+    @media (width >= 48rem) {
+      --tw-leading: 140%;
+      line-height: 140%;
+    }
+  }
+  .after\:md\:max-w-\[calc\(100\%-310px\)\] {
+    &::after {
+      content: var(--tw-content);
+      @media (width >= 48rem) {
+        max-width: calc(100% - 310px);
+      }
     }
   }
   .lg\:absolute {
@@ -1665,6 +1682,11 @@
   .lg\:w-\[70\%\] {
     @media (width >= 64rem) {
       width: 70%;
+    }
+  }
+  .lg\:w-auto {
+    @media (width >= 64rem) {
+      width: auto;
     }
   }
   .lg\:max-w-\[111px\] {
@@ -1788,6 +1810,11 @@
       padding: calc(var(--spacing) * 10);
     }
   }
+  .lg\:p-15 {
+    @media (width >= 64rem) {
+      padding: calc(var(--spacing) * 15);
+    }
+  }
   .lg\:px-8 {
     @media (width >= 64rem) {
       padding-inline: calc(var(--spacing) * 8);
@@ -1818,6 +1845,11 @@
       padding-block: 120px;
     }
   }
+  .lg\:pt-10 {
+    @media (width >= 64rem) {
+      padding-top: calc(var(--spacing) * 10);
+    }
+  }
   .lg\:pt-15 {
     @media (width >= 64rem) {
       padding-top: calc(var(--spacing) * 15);
@@ -1826,6 +1858,11 @@
   .lg\:pt-\[72px\] {
     @media (width >= 64rem) {
       padding-top: 72px;
+    }
+  }
+  .lg\:pb-7\.5 {
+    @media (width >= 64rem) {
+      padding-bottom: calc(var(--spacing) * 7.5);
     }
   }
   .lg\:pb-15 {
@@ -1870,6 +1907,14 @@
     @media (width >= 64rem) {
       --tw-leading: 130%;
       line-height: 130%;
+    }
+  }
+  .after\:lg\:max-w-\[calc\(100\%-410px\)\] {
+    &::after {
+      content: var(--tw-content);
+      @media (width >= 64rem) {
+        max-width: calc(100% - 410px);
+      }
     }
   }
   .after\:lg\:bg-\[var\(--warm\)\] {
@@ -2077,6 +2122,18 @@
 }
 .font-nunito {
   font-family: Nunito;
+}
+.after\:bg-testimonial-banner::after {
+  content: var(--tw-content);
+  background-image: url('/assets/img/ascent-tailwind/bg-img1.png');
+}
+.after\:bg-cover::after {
+  content: var(--tw-content);
+  background-size: cover;
+}
+.after\:bg-no-repeat::after {
+  content: var(--tw-content);
+  background-repeat: no-repeat;
 }
 @property --tw-translate-x {
   syntax: "*";
