add section letter

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -227,6 +227,15 @@
   .top-1\/2 {
     top: calc(1/2 * 100%);
   }
+  .top-2\/2 {
+    top: calc(2/2 * 100%);
+  }
+  .top-3\/4 {
+    top: calc(3/4 * 100%);
+  }
+  .top-4\/5 {
+    top: calc(4/5 * 100%);
+  }
   .top-5 {
     top: calc(var(--spacing) * 5);
   }
@@ -266,11 +275,20 @@
   .right-11 {
     right: calc(var(--spacing) * 11);
   }
+  .right-\[10px\] {
+    right: 10px;
+  }
+  .right-\[50px\] {
+    right: 50px;
+  }
   .right-\[67px\] {
     right: 67px;
   }
   .right-\[87px\] {
     right: 87px;
+  }
+  .right-\[110px\] {
+    right: 110px;
   }
   .-bottom-5 {
     bottom: calc(var(--spacing) * -5);
@@ -325,6 +343,12 @@
   }
   .z-\[1\] {
     z-index: 1;
+  }
+  .order-0 {
+    order: 0;
+  }
+  .order-1 {
+    order: 1;
   }
   .col-span-full {
     grid-column: 1 / -1;
@@ -386,6 +410,9 @@
   .mr-0 {
     margin-right: calc(var(--spacing) * 0);
   }
+  .mr-1 {
+    margin-right: calc(var(--spacing) * 1);
+  }
   .mb-6 {
     margin-bottom: calc(var(--spacing) * 6);
   }
@@ -418,6 +445,9 @@
   }
   .hidden {
     display: none;
+  }
+  .inline-block {
+    display: inline-block;
   }
   .inline-flex {
     display: inline-flex;
@@ -463,6 +493,9 @@
   }
   .max-h-15 {
     max-height: calc(var(--spacing) * 15);
+  }
+  .max-h-20 {
+    max-height: calc(var(--spacing) * 20);
   }
   .max-h-\[88px\] {
     max-height: 88px;
@@ -548,6 +581,9 @@
   .max-w-\[528px\] {
     max-width: 528px;
   }
+  .max-w-\[598px\] {
+    max-width: 598px;
+  }
   .max-w-\[630px\] {
     max-width: 630px;
   }
@@ -579,8 +615,36 @@
     --tw-translate-x: calc(calc(1/2 * 100%) * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
+  .-translate-y-0\.5 {
+    --tw-translate-y: calc(var(--spacing) * -0.5);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-y-1 {
+    --tw-translate-y: calc(var(--spacing) * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
   .-translate-y-1\/2 {
     --tw-translate-y: calc(calc(1/2 * 100%) * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-y-2 {
+    --tw-translate-y: calc(var(--spacing) * -2);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-y-3 {
+    --tw-translate-y: calc(var(--spacing) * -3);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-y-3\.5 {
+    --tw-translate-y: calc(var(--spacing) * -3.5);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-y-3\/4 {
+    --tw-translate-y: calc(calc(3/4 * 100%) * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-y-4 {
+    --tw-translate-y: calc(var(--spacing) * -4);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .translate-y-0 {
@@ -689,6 +753,9 @@
   .overflow-hidden {
     overflow: hidden;
   }
+  .overflow-x-hidden {
+    overflow-x: hidden;
+  }
   .overflow-y-auto {
     overflow-y: auto;
   }
@@ -753,6 +820,9 @@
   .border-\[var\(--secondary\)\] {
     border-color: var(--secondary);
   }
+  .border-black {
+    border-color: var(--color-black);
+  }
   .border-gray-200 {
     border-color: var(--color-gray-200);
   }
@@ -804,6 +874,57 @@
   .bg-white {
     background-color: var(--color-white);
   }
+  .bg-\[linear-gradient\(180deg\,_\#FFF0E5_0\%\,_rgba\(255\,_240\,_229\,_0\.00\)_100\%\)\] {
+    background-image: linear-gradient(180deg, #FFF0E5 0%, rgba(255, 240, 229, 0.00) 100%);
+  }
+  .bg-\[linear-gradient\(180deg\,_rgba\(238\,255\,200\,0\.00\)_0\%\,_\#E9FFB6_100\%\)\] {
+    background-image: linear-gradient(180deg, rgba(238,255,200,0.00) 0%, #E9FFB6 100%);
+  }
+  .bg-\[url\(\'\'\)\] {
+    background-image: url('');
+  }
+  .bg-\[url\(\'\/\'\)\] {
+    background-image: url('/');
+  }
+  .bg-\[url\(\'\/assets\/\'\)\] {
+    background-image: url('/assets/');
+  }
+  .bg-\[url\(\'\/assets\/images\/shapes\/egg-shap\.png\'\)\] {
+    background-image: url('/assets/images/shapes/egg-shap.png');
+  }
+  .bg-\[url\(\'\/assets\/img\'\)\] {
+    background-image: url('/assets/img');
+  }
+  .bg-\[url\(\'\/assets\/img\/\'\)\] {
+    background-image: url('/assets/img/');
+  }
+  .bg-\[url\(\'\/assets\/img\/ascent\'\)\] {
+    background-image: url('/assets/img/ascent');
+  }
+  .bg-\[url\(\'\/assets\/img\/ascent-tailwind\'\)\] {
+    background-image: url('/assets/img/ascent-tailwind');
+  }
+  .bg-\[url\(\'\/assets\/img\/ascent-tailwind\/\'\)\] {
+    background-image: url('/assets/img/ascent-tailwind/');
+  }
+  .bg-\[url\(\'\/assets\/img\/ascent-tailwind\/egg-shap\.png\'\)\] {
+    background-image: url('/assets/img/ascent-tailwind/egg-shap.png');
+  }
+  .bg-\[url\(\'\/assets\/img\/ascent-tailwind\/egg-shape\'\)\] {
+    background-image: url('/assets/img/ascent-tailwind/egg-shape');
+  }
+  .bg-\[url\(\'\/assets\/img\/ascent-tailwind\/egg-shape\.png\'\)\] {
+    background-image: url('/assets/img/ascent-tailwind/egg-shape.png');
+  }
+  .bg-contain {
+    background-size: contain;
+  }
+  .bg-bottom {
+    background-position: bottom;
+  }
+  .bg-no-repeat {
+    background-repeat: no-repeat;
+  }
   .object-cover {
     object-fit: cover;
   }
@@ -849,6 +970,9 @@
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
   }
+  .py-4 {
+    padding-block: calc(var(--spacing) * 4);
+  }
   .py-5 {
     padding-block: calc(var(--spacing) * 5);
   }
@@ -891,6 +1015,9 @@
   .pt-\[78px\] {
     padding-top: 78px;
   }
+  .pb-3 {
+    padding-bottom: calc(var(--spacing) * 3);
+  }
   .pb-5 {
     padding-bottom: calc(var(--spacing) * 5);
   }
@@ -908,6 +1035,9 @@
   }
   .pb-\[71px\] {
     padding-bottom: 71px;
+  }
+  .pl-6 {
+    padding-left: calc(var(--spacing) * 6);
   }
   .text-center {
     text-align: center;
@@ -958,6 +1088,10 @@
   .leading-\[110\%\] {
     --tw-leading: 110%;
     line-height: 110%;
+  }
+  .leading-\[120\%\] {
+    --tw-leading: 120%;
+    line-height: 120%;
   }
   .leading-\[130\%\] {
     --tw-leading: 130%;
@@ -1135,6 +1269,13 @@
     &:is(:where(.group\/btn):hover *) {
       @media (hover: hover) {
         color: var(--green-foreground);
+      }
+    }
+  }
+  .group-hover\/btn\:text-\[var\(--secondary-foreground\)\] {
+    &:is(:where(.group\/btn):hover *) {
+      @media (hover: hover) {
+        color: var(--secondary-foreground);
       }
     }
   }
@@ -1421,6 +1562,11 @@
       max-height: 100%;
     }
   }
+  .sm\:max-w-\[210px\] {
+    @media (width >= 40rem) {
+      max-width: 210px;
+    }
+  }
   .sm\:grid-cols-2 {
     @media (width >= 40rem) {
       grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -1444,6 +1590,11 @@
   .sm\:flex-nowrap {
     @media (width >= 40rem) {
       flex-wrap: nowrap;
+    }
+  }
+  .sm\:items-center {
+    @media (width >= 40rem) {
+      align-items: center;
     }
   }
   .sm\:items-end {
@@ -1541,6 +1692,11 @@
       padding-inline: calc(var(--spacing) * 6);
     }
   }
+  .md\:pb-4 {
+    @media (width >= 48rem) {
+      padding-bottom: calc(var(--spacing) * 4);
+    }
+  }
   .md\:text-2xl {
     @media (width >= 48rem) {
       font-size: var(--text-2xl);
@@ -1576,6 +1732,12 @@
       line-height: 140%;
     }
   }
+  .md\:leading-\[141\%\] {
+    @media (width >= 48rem) {
+      --tw-leading: 141%;
+      line-height: 141%;
+    }
+  }
   .after\:md\:max-w-\[calc\(100\%-310px\)\] {
     &::after {
       content: var(--tw-content);
@@ -1609,6 +1771,16 @@
       left: calc(var(--spacing) * 24);
     }
   }
+  .lg\:order-0 {
+    @media (width >= 64rem) {
+      order: 0;
+    }
+  }
+  .lg\:order-1 {
+    @media (width >= 64rem) {
+      order: 1;
+    }
+  }
   .lg\:mt-0 {
     @media (width >= 64rem) {
       margin-top: calc(var(--spacing) * 0);
@@ -1617,6 +1789,11 @@
   .lg\:mt-4 {
     @media (width >= 64rem) {
       margin-top: calc(var(--spacing) * 4);
+    }
+  }
+  .lg\:mt-6 {
+    @media (width >= 64rem) {
+      margin-top: calc(var(--spacing) * 6);
     }
   }
   .lg\:mt-7\.5 {
@@ -1709,6 +1886,11 @@
       max-width: 300px;
     }
   }
+  .lg\:max-w-\[370px\] {
+    @media (width >= 64rem) {
+      max-width: 370px;
+    }
+  }
   .lg\:max-w-\[410px\] {
     @media (width >= 64rem) {
       max-width: 410px;
@@ -1727,6 +1909,11 @@
   .lg\:max-w-\[520px\] {
     @media (width >= 64rem) {
       max-width: 520px;
+    }
+  }
+  .lg\:max-w-\[530px\] {
+    @media (width >= 64rem) {
+      max-width: 530px;
     }
   }
   .lg\:max-w-\[600px\] {
@@ -1825,6 +2012,11 @@
       padding-inline: calc(var(--spacing) * 10);
     }
   }
+  .lg\:py-7 {
+    @media (width >= 64rem) {
+      padding-block: calc(var(--spacing) * 7);
+    }
+  }
   .lg\:py-7\.5 {
     @media (width >= 64rem) {
       padding-block: calc(var(--spacing) * 7.5);
@@ -1858,6 +2050,11 @@
   .lg\:pt-\[72px\] {
     @media (width >= 64rem) {
       padding-top: 72px;
+    }
+  }
+  .lg\:pb-5 {
+    @media (width >= 64rem) {
+      padding-bottom: calc(var(--spacing) * 5);
     }
   }
   .lg\:pb-7\.5 {
